[package]
name = "leptos-mdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4", features = ["serde", "nightly", "ssr"] }
html_parser = "0.7.0"
comrak = "0.18.0"
frontmatter = "0.4.0"
